@@ -44,6 +44,14 @@ enable_critical: 1
 mob_critical_rate: 100
 critical_rate: 100
 
+// Should normal attacks give you a walk delay?
+// If no, characters can move as soon as they start an attack (attack animation
+// or walk animation may be omitted client-side, causing cropped attacks or
+// monsters that teleport to you)
+// If set, total walk delay is set to your attack animation duration divided by
+// this value (eg: 1 -> 100%, 2 -> 50%, 4->25%...)
+attack_walk_delay: 0
+
 // Move-delay adjustment after being hit. (Note 2)
 // The 'can't walk' delay after being hit is calculated as a percentage of the damage animation duration.
 // NOTE: Only affects the normal delay from a single attack, not the delay added by the multihit_delay option below.
