@@ -1315,7 +1315,9 @@ static int unit_attack_timer_sub(struct block_list* src, int tid, unsigned int t
 
 		ud->attackabletime = tick + sstatus->adelay;
 //		You can't move if you can't attack neither.
-		unit_set_walkdelay(src, tick, sstatus->amotion, 1);
+		if (battle_config.attack_walk_delay)
+			unit_set_walkdelay(src, tick,
+				sstatus->amotion/battle_config.attack_walk_delay, 1);
 	}
 
 	if(ud->state.attack_continue)
